feat(ui feedback): below are the result of my squashed commits - feat(index page):add dark overlay on image to make text visible 	[Start #165355004] - feat(logo):reduce banka logo in header  to 40px - feat(header):change header color to the same as footer - feat(signup):reduce fields needed for signup - feat(edit profile):add new edit_profile page - feat(staff-dashboard):make each account-list field change background on hover - feat(header):add user-icons to header next to users name - feat(logout-button):make logout button toggle without shifting user name - feat(signin-signup):make signin and signup buttons toggle without shifting each other - feat(signin-form):implement feedback to signin form - feat(account-record):implement some feedback to bank-account-record page 	- style activate-deactivate and delete button 	- add icon which will bring up modal when clicked 	- style the borders of the various sections to make them more pronounced 	- change the colors of the various information fields to red - feat(account record):finish up UI changes to bank-account record page 	- add modal for deposit or withdrawal which will pop up after atm-card icon is clicked 	- add modal for delete account which will pop up when delete button is clicked - feat(staff end): complete remaining feedback changes for staff interface 	- delete credit account and debit account pages since modal covers them already 	- remove password field for creating staff or admin account - feat(user dashboard):implement UI changes for user dashboard 	- remove irrelevant fields from profile details section 	- change information field colors to red 	- add pencil icon to act as button for editing account details 	- use modal to implement form for updating account details 	[Finishes #165355004]

--- a/UI/accounts_list.html
+++ b/UI/accounts_list.html
@@ -1,148 +1,156 @@
 <!DOCTYPE html5>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Banka | Accounts List</title>
-  </head>
-  <body>
-    <header>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <title>Banka | Accounts List</title>
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div id="header-title">
+        <a href="accounts_list.html">
+          <h1>Banka</h1>
+        </a>
+      </div>
+      <div id="header-links">
+        <a class="pre-login-link unused-link" href="#">Sign Up</a>
+        <a class="pre-login-link unused-link" href="#">Login</a>
+        <p><i class="far fa-user"></i> Admin</p>
+        <p><a href="cr_admin_staff.html"><i class="fas fa-plus"></i> New Staff</a></p>
+        <a id="logout" href="index.html">Logout</a>
+      </div>
+    </div>
+  </header>
+  <main>
+    <!-- <section id="staff-navbar">
       <div class="container">
-        <div id="header-title">
-          <a href="accounts_list.html"><h1>Banka</h1></a>
-        </div>
-        <div id="header-links">
-          <a class="pre-login-link unused-link" href="#">Sign Up</a>
-          <a class="pre-login-link unused-link" href="#">Login</a>
-          <p>Logged In As Admin</p>
-          <a id="logout" href="index.html">Logout</a>
+        <a href="cr_admin_staff.html"><i class="fas fa-plus"></i> New Staff</a>
+        <div class="bnk-ops">
+          <a href="credit_user.html">Deposit</a>
+          <a href="debit_user.html">Withdrawal</a>
         </div>
       </div>
-    </header>
-    <main>
-      <section id="staff-navbar">
-        <div class="container">
-          <a href="cr_admin_staff.html">New Staff</a>
-          <div class="bnk-ops">
-            <a href="credit_user.html">Deposit</a>
-            <a href="debit_user.html">Withdrawal</a>
-          </div>
-        </div>
-      </section>
-      <section id="accounts-list" class="container">
-        <h3 id="dashboard-main-title" class="dashboard-section-title">
-          Accounts List
-        </h3>
+    </section> -->
+    <section id="accounts-list" class="container">
+      <h3 id="dashboard-main-title" class="dashboard-section-title">
+        Accounts List
+      </h3>
 
-        <div class="accounts-list-div">
-          <div class="display-full-div">
-            <p class="acc-list-title acc-list-val-0">id</p>
-            <p class="acc-list-title acc-list-val-1">a/c num</p>
-            <p class="acc-list-title acc-list-val-2">account name</p>
-            <p class="acc-list-title acc-list-val-0">type</p>
-          </div>
-          <div class="acc-list-details">
-            <ul>
-              <a href="bank_account_record.html"
-                ><li>
-                  <div class="display-full-div">
-                    <p class="acc-list-val-0">0034</p>
-                    <p class="acc-list-val-1">2031279458</p>
-                    <p class="acc-list-val-2">Sundar Pichai</p>
-                    <p class="acc-list-val-0">Savings</p>
-                  </div>
-                </li></a
-              >
-              <a href="bank_account_record.html">
-                <li>
-                  <div class="display-full-div">
-                    <p class="acc-list-val-0">0104</p>
-                    <p class="acc-list-val-1">1087673271</p>
-                    <p class="acc-list-val-2">Jermaine Cole</p>
-                    <p class="acc-list-val-0">Current</p>
-                  </div>
-                </li>
-              </a>
-              <a href="bank_account_record.html">
-                <li>
-                  <div class="display-full-div">
-                    <p class="acc-list-val-0">0649</p>
-                    <p class="acc-list-val-1">1065892356</p>
-                    <p class="acc-list-val-2">Cristiano Ronaldo</p>
-                    <p class="acc-list-val-0">Current</p>
-                  </div>
-                </li>
-              </a>
-              <a href="bank_account_record.html">
-                <li>
-                  <div class="display-full-div">
-                    <p class="acc-list-val-0">0209</p>
-                    <p class="acc-list-val-1">2017984635</p>
-                    <p class="acc-list-val-2">Wiz Khalifa</p>
-                    <p class="acc-list-val-0">Savings</p>
-                  </div>
-                </li>
-              </a>
-
-              <a href="bank_account_record.html">
-                <li>
-                  <div class="display-full-div">
-                    <p class="acc-list-val-0">0034</p>
-                    <p class="acc-list-val-1">20312794587</p>
-                    <p class="acc-list-val-2">Eden Hazard</p>
-                    <p class="acc-list-val-0">Savings</p>
-                  </div>
-                </li>
-              </a>
-              <a href="bank_account_record.html">
-                <li>
-                  <div class="display-full-div">
-                    <p class="acc-list-val-0">0104</p>
-                    <p class="acc-list-val-1">1087673271</p>
-                    <p class="acc-list-val-2">Satya Nadella</p>
-                    <p class="acc-list-val-0">Current</p>
-                  </div>
-                </li>
-              </a>
-              <a href="bank_account_record.html">
-                <li>
-                  <div class="display-full-div">
-                    <p class="acc-list-val-0">0649</p>
-                    <p class="acc-list-val-1">1065892356</p>
-                    <p class="acc-list-val-2">Blake Lively</p>
-                    <p class="acc-list-val-0">Current</p>
-                  </div>
-                </li>
-              </a>
-              <a href="bank_account_record.html">
-                <li>
-                  <div class="display-full-div">
-                    <p class="acc-list-val-0">0649</p>
-                    <p class="acc-list-val-1">1065892356</p>
-                    <p class="acc-list-val-2">Mohini Ufeli</p>
-                    <p class="acc-list-val-0">Current</p>
-                  </div>
-                </li>
-              </a>
-              <a href="bank_account_record.html">
-                <li>
-                  <div class="display-full-div">
-                    <p class="acc-list-val-0">0649</p>
-                    <p class="acc-list-val-1">1065892356</p>
-                    <p class="acc-list-val-2">Jeff Bezos</p>
-                    <p class="acc-list-val-0">Current</p>
-                  </div>
-                </li>
-              </a>
-            </ul>
-          </div>
+      <div class="accounts-list-div">
+        <div class="display-full-div">
+          <p class="acc-list-title acc-list-val-0">id</p>
+          <p class="acc-list-title acc-list-val-1">a/c num</p>
+          <p class="acc-list-title acc-list-val-2">account name</p>
+          <p class="acc-list-title acc-list-val-0">type</p>
         </div>
-      </section>
-    </main>
-    <footer>
-      <p>Banka, Copyright &copy; 2019</p>
-    </footer>
-  </body>
+        <div class="acc-list-details">
+          <ul>
+            <a href="bank_account_record.html">
+              <li>
+                <div class="indiv-acc display-full-div">
+                  <p class="acc-list-val-0">0034</p>
+                  <p class="acc-list-val-1">2031279458</p>
+                  <p class="acc-list-val-2">Sundar Pichai</p>
+                  <p class="acc-list-val-0">Savings</p>
+                </div>
+              </li>
+            </a>
+            <a href="bank_account_record.html">
+              <li>
+                <div class="indiv-acc display-full-div">
+                  <p class="acc-list-val-0">0104</p>
+                  <p class="acc-list-val-1">1087673271</p>
+                  <p class="acc-list-val-2">Jermaine Cole</p>
+                  <p class="acc-list-val-0">Current</p>
+                </div>
+              </li>
+            </a>
+            <a href="bank_account_record.html">
+              <li>
+                <div class="indiv-acc display-full-div">
+                  <p class="acc-list-val-0">0649</p>
+                  <p class="acc-list-val-1">1065892356</p>
+                  <p class="acc-list-val-2">Cristiano Ronaldo</p>
+                  <p class="acc-list-val-0">Current</p>
+                </div>
+              </li>
+            </a>
+            <a href="bank_account_record.html">
+              <li>
+                <div class="indiv-acc display-full-div">
+                  <p class="acc-list-val-0">0209</p>
+                  <p class="acc-list-val-1">2017984635</p>
+                  <p class="acc-list-val-2">Wiz Khalifa</p>
+                  <p class="acc-list-val-0">Savings</p>
+                </div>
+              </li>
+            </a>
+
+            <a href="bank_account_record.html">
+              <li>
+                <div class="indiv-acc display-full-div">
+                  <p class="acc-list-val-0">0034</p>
+                  <p class="acc-list-val-1">20312794587</p>
+                  <p class="acc-list-val-2">Eden Hazard</p>
+                  <p class="acc-list-val-0">Savings</p>
+                </div>
+              </li>
+            </a>
+            <a href="bank_account_record.html">
+              <li>
+                <div class="indiv-acc display-full-div">
+                  <p class="acc-list-val-0">0104</p>
+                  <p class="acc-list-val-1">1087673271</p>
+                  <p class="acc-list-val-2">Satya Nadella</p>
+                  <p class="acc-list-val-0">Current</p>
+                </div>
+              </li>
+            </a>
+            <a href="bank_account_record.html">
+              <li>
+                <div class="indiv-acc display-full-div">
+                  <p class="acc-list-val-0">0649</p>
+                  <p class="acc-list-val-1">1065892356</p>
+                  <p class="acc-list-val-2">Blake Lively</p>
+                  <p class="acc-list-val-0">Current</p>
+                </div>
+              </li>
+            </a>
+            <a href="bank_account_record.html">
+              <li>
+                <div class="indiv-acc display-full-div">
+                  <p class="acc-list-val-0">0649</p>
+                  <p class="acc-list-val-1">1065892356</p>
+                  <p class="acc-list-val-2">Mohini Ufeli</p>
+                  <p class="acc-list-val-0">Current</p>
+                </div>
+              </li>
+            </a>
+            <a href="bank_account_record.html">
+              <li>
+                <div class="indiv-acc display-full-div">
+                  <p class="acc-list-val-0">0649</p>
+                  <p class="acc-list-val-1">1065892356</p>
+                  <p class="acc-list-val-2">Jeff Bezos</p>
+                  <p class="acc-list-val-0">Current</p>
+                </div>
+              </li>
+            </a>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>Banka, Copyright &copy; 2019</p>
+  </footer>
+</body>
+
 </html>
