--- a/UI/create_account.html
+++ b/UI/create_account.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html5>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Banka | Create Account</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div id="header-title">
-          <a href="create_account.html"><h1>Banka</h1></a>
-        </div>
-        <div id="header-links">
-          <a class="pre-login-link unused-link" href="signup.html">Sign Up</a>
-          <a class="pre-login-link unused-link" href="sign_in.html">Login</a>
-          <p>Logged In As Osaukhumwen</p>
-          <a id="logout" href="index.html">Logout</a>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <title>Banka | Create Account</title>
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div id="header-title">
+        <a href="create_account.html">
+          <h1>Banka</h1>
+        </a>
       </div>
-    </header>
-    <main>
-      <section id="create-account" class="container">
-        <div class="all-form">
-          <h2>Step 2: Open A Bank Account</h2>
-          <form>
-            <div>
-              <select name="accountType" required>
-                <option disabled selected value="">Type</option>
-                <option value="savings">Savings</option>
-                <option value="current">Current</option>
-              </select>
-            </div>
-          </form>
-          <!-- I placed the button here so that it doesn't submit the form just yet,
+      <div id="header-links">
+        <a class="pre-login-link unused-link" href="signup.html">Sign Up</a>
+        <a class="pre-login-link unused-link" href="sign_in.html">Login</a>
+        <p><i class="far fa-user"></i> Osaukhumwen</p>
+        <a id="logout" href="index.html">Logout</a>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section id="create-account" class="container">
+      <div class="all-form">
+        <h2>Step 2: Open A Bank Account</h2>
+        <form>
+          <div>
+            <select name="accountType" required>
+              <option disabled selected value="">Type</option>
+              <option value="savings">Savings</option>
+              <option value="current">Current</option>
+            </select>
+          </div>
+        </form>
+        <!-- I placed the button here so that it doesn't submit the form just yet,
           but should rather serve as a link to the Dashboard page -->
-          <a href="dashboard.html"
-            ><button class="form-button">Open Account</button></a
-          >
-        </div>
-      </section>
-    </main>
-    <footer>
-      <p>Banka, Copyright &copy; 2019</p>
-    </footer>
-  </body>
+        <a href="dashboard.html"><button class="form-button">Open Account</button></a>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>Banka, Copyright &copy; 2019</p>
+  </footer>
+</body>
+
 </html>
