--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -1,106 +1,147 @@
 <!DOCTYPE html5>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Banka | Dashboard</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div id="header-title">
-          <a href="dashboard.html"><h1>Banka</h1></a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <title>Banka | Dashboard</title>
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div id="header-title">
+        <a href="dashboard.html">
+          <h1>Banka</h1>
+        </a>
+      </div>
+      <div id="header-links">
+        <a class="pre-login-link unused-link" href="signup.html">Sign Up</a>
+        <a class="pre-login-link unused-link" href="sign_in.html">Login</a>
+        <p><i class="far fa-user"></i> Osaukhumwen</p>
+        <a id="logout" href="index.html">Logout</a>
+      </div>
+    </div>
+  </header>
+  <main>
+    <div id="update-account-overlay">
+      <div id="update-overlay-content">
+        <form>
+          <div>
+            <input type="text" placeholder="First Name" pattern="[a-zA-Z]{2,15}"
+              title="Alphabets only. Max 15 characters" required />
+          </div>
+          <div>
+            <input type="text" placeholder="Last Name" pattern="[a-zA-Z]{2,15}"
+              title="Alphabets only. Max 15 characters" required />
+          </div>
+          <div>
+            <select name="gender" required>
+              <option disabled selected value="">Gender</option>
+              <option value="male" required>Male</option>
+              <option value="female" required>Female</option>
+            </select>
+          </div>
+          <div>
+            <input type="text" placeholder="Age" pattern="[0-9]{1,3}" title="Numbers only. Max 3 digits" required />
+          </div>
+          <div>
+            <input type="email" placeholder="Email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+              title="Must follow standard email format" required />
+          </div>
+          <div>
+            <input type="tel" placeholder="Phone Number" pattern="[0-9]{11}" title="Eleven(11) digits" required />
+          </div>
+          <div>
+            <input type="text" placeholder="City" name="city" pattern="[a-zA-Z0-9 ]{3,15}"
+              title="No special characters. Three(3) to Fifteen(15) characters" required />
+          </div>
+          <div>
+            <input type="text" placeholder="State" name="state" pattern="[a-zA-Z0-9 ]{3,15}"
+              title="No special characters. Three(3) to Fifteen(15) characters" required />
+          </div>
+          <button class="form-button" type="submit">Update Details</button>
+        </form>
+      </div>
+    </div>
+    <section class="container account-details dashboard">
+      <h3 id="dashboard-main-title" class="dashboard-section-title">
+        Dashboard
+      </h3>
+      <div class="details-div">
+        <div class="acc-details-div">
+          <p class="acc-details-title">Account Number</p>
+          <p class="acc-details-val">2002483059</p>
         </div>
-        <div id="header-links">
-          <a class="pre-login-link unused-link" href="signup.html">Sign Up</a>
-          <a class="pre-login-link unused-link" href="sign_in.html">Login</a>
-          <p>Logged In As Osaukhumwen</p>
-          <a id="logout" href="index.html">Logout</a>
+        <div class="acc-details-div left">
+          <p class="acc-details-title total-bal">Total Balance</p>
+          <p class="acc-details-val">N2,600,000.00</p>
         </div>
       </div>
-    </header>
-    <main>
-      <section class="container account-details dashboard">
-        <h3 id="dashboard-main-title" class="dashboard-section-title">
-          Dashboard
-        </h3>
-        <div class="details-div">
-          <div class="acc-details-div">
-            <p class="acc-details-title">Account Number</p>
-            <p class="acc-details-val">2002483059</p>
+    </section>
+    <section id="profile" class="container account-details">
+      <h3 class="dashboard-section-title">Personal Information <i class="fas fa-pen" id="pen-icon"></i></h3>
+      <div class="details-div">
+        <div class="display-full-div">
+          <div class="display-half-div left-side">
+            <p><span>First Name:</span> Osaukhumwen</p>
           </div>
-          <div class="acc-details-div left">
-            <p class="acc-details-title total-bal">Total Balance</p>
-            <p class="acc-details-val">N2,600,000.00</p>
+          <div class="display-half-div right-side">
+            <p><span>Last Name:</span> Iyamuosa</p>
           </div>
         </div>
-      </section>
-      <section id="profile" class="container account-details">
-        <h3 class="dashboard-section-title">Personal Information</h3>
-        <div class="details-div">
-          <div class="display-full-div">
-            <div class="display-half-div left-side">
-              <p>Name: Osaukhumwen Iyamuosa</p>
-            </div>
-            <div class="display-half-div right-side">
-              <p>Nationality: Nigerian</p>
-            </div>
-          </div>
 
-          <div class="display-full-div">
-            <div class="display-half-div left-side">
-              <p>Gender: Male</p>
-            </div>
-            <div class="display-half-div right-side">
-              <p>Age: 22</p>
-            </div>
+        <div class="display-full-div">
+          <div class="display-half-div left-side">
+            <p><span>Gender:</span> Male</p>
           </div>
-
-          <div class="display-full-div">
-            <div class="display-half-div left-side">
-              <p>Occupation: Software Engineer</p>
-            </div>
-            <div class="display-half-div right-side">
-              <p>Phone Number: 07068412039</p>
-            </div>
-          </div>
-
-          <div class="display-full-div">
-            <div class="display-half-div left-side">
-              <p>
-                Address Line 1: 26, Christopher Adodo Street
-              </p>
-            </div>
-            <div class="display-half-div right-side">
-              <p>Address Line 2: Evboumore Quarters</p>
-            </div>
-          </div>
-
-          <div class="display-full-div">
-            <div class="display-half-div left-side">
-              <p>City: Benin</p>
-            </div>
-            <div class="display-half-div right-side">
-              <p>State: Edo</p>
-            </div>
+          <div class="display-half-div right-side">
+            <p><span>Age:</span> 22</p>
           </div>
         </div>
-      </section>
-      <section id="trnsc-hstr" class="container account-details">
-        <h3 class="dashboard-section-title">Transaction History</h3>
-        <div class="trns-hist-details details-div">
+
+        <div class="display-full-div">
+          <div class="display-half-div left-side">
+            <p><span>Email:</span> osaukhu.bi@gmail.com</p>
+          </div>
+          <div class="display-half-div right-side">
+            <p><span>Phone Number:</span> 07068412039</p>
+          </div>
+        </div>
+
+        <div class="display-full-div">
+          <div class="display-half-div left-side">
+            <p><span>City:</span> Benin</p>
+          </div>
+          <div class="display-half-div right-side">
+            <p><span>State:</span> Edo</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="trnsc-hstr" class="container account-details">
+      <h3 class="dashboard-section-title">Transaction History</h3>
+      <div id="transaction-history-div" class="details-div">
+        <div class="display-full-div">
+          <p class="trans-hist-title trns-details-side">date</p>
+          <p class="trans-hist-title trns-details-mid">amount</p>
+          <p class="trans-hist-title trns-details-side">type</p>
+        </div>
+        <div class="trns-hist-details">
           <ul>
-            <a href="transaction.html"
-              ><li>
+            <a href="transaction.html">
+              <li>
                 <div class="display-full-div">
                   <p class="trns-details-side">23 MAR 2019</p>
                   <p class="trns-details-mid">N720,000</p>
                   <p class="trns-details-side">CREDIT</p>
                 </div>
-              </li></a
-            >
+              </li>
+            </a>
             <a href="transaction.html">
               <li>
                 <div class="display-full-div">
@@ -175,10 +216,14 @@
             </a>
           </ul>
         </div>
-      </section>
-    </main>
-    <footer>
-      <p>Banka, Copyright &copy; 2019</p>
-    </footer>
-  </body>
+      </div>
+
+    </section>
+  </main>
+  <footer>
+    <p>Banka, Copyright &copy; 2019</p>
+  </footer>
+</body>
+<script src="./assets/js/dashboardScript.js"></script>
+
 </html>
