--- a/UI/index.html
+++ b/UI/index.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html5>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Banka | Home Page</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div id="header-title">
-          <a href="index.html"><h1>Banka</h1></a>
-        </div>
-        <div id="header-links">
-          <a class="pre-login-link" href="signup.html">Sign Up</a>
-          <a class="pre-login-link" href="sign_in.html">Login</a>
-          <a class="unused-link" href="#">Logged in as Osaukhu</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Banka | Home Page</title>
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div id="header-title">
+        <a href="index.html">
+          <h1>Banka</h1>
+        </a>
+      </div>
+      <div id="header-links">
+        <p class="login-signup"><a class="pre-login-link" href="signup.html">
+            Sign Up
+          </a></p>
+        <p class="login-signup"><a class="pre-login-link" href="sign_in.html">
+            Login
+          </a></p>
+        <a class="unused-link" href="#">Logged in as Osaukhu</a>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section id="homepage">
+      <div id="overlay">
+        <div class="container">
+          <div class="overlay-content">
+            <h1>Welcome To Banka</h1>
+            <p>
+              Your number one banking services app. Sign Up with us today to enjoy
+              the numerous benefits we offer
+            </p>
+            <a href="signup.html"><button class="signup-btn">Sign Up</button></a>
+            <a href="sign_in.html"><button class="login-btn">Login</button></a>
+          </div>
         </div>
       </div>
-    </header>
-    <main>
-      <section id="homepage">
-        <div class="container">
-          <h1>Welcome To Banka</h1>
-          <p>
-            Your number one banking services app. Sign Up with us today to enjoy
-            the numerous benefits we offer
-          </p>
-          <a href="signup.html"><button class="signup-btn">Sign Up</button></a>
-          <a href="sign_in.html"><button class="login-btn">Login</button></a>
-        </div>
-      </section>
-    </main>
-    <footer id="hp-footer">
-      <p>Banka, Copyright &copy; 2019</p>
-    </footer>
-  </body>
+    </section>
+  </main>
+  <footer id="hp-footer">
+    <p>Banka, Copyright &copy; 2019</p>
+  </footer>
+</body>
+
 </html>
