--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -1,62 +1,58 @@
 <!DOCTYPE html5>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Banka | Sign In</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div id="header-title">
-          <a href="index.html"><h1>Banka</h1></a>
-        </div>
-        <div id="header-links">
-          <a class="pre-login-link" href="signup.html">Sign Up</a>
-          <a class="pre-login-link" href="sign_in.html">Login</a>
-          <a class="unused-link" href="#">Logged in as Osaukhu</a>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Banka | Sign In</title>
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div id="header-title">
+        <a href="index.html">
+          <h1>Banka</h1>
+        </a>
       </div>
-    </header>
-    <main>
-      <section id="login" class="container">
-        <div class="all-form">
-          <h2>Sign In</h2>
-          <form>
-            <div>
-              <input
-                type="email"
-                placeholder="Email"
-                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
-                title="Must follow standard email format"
-                required
-              />
-            </div>
-            <div>
-              <input
-                type="password"
-                placeholder="Password"
-                pattern=".{6,10}"
-                title="Must be between Six(6) to Ten(10) characters"
-                required
-              />
-            </div>
-          </form>
-          <!-- I placed the button here so that it doesn't submit the form just yet,
+      <div id="header-links">
+        <p class="login-signup"><a class="pre-login-link" href="signup.html">
+            Sign Up
+          </a></p>
+        <p class="login-signup"><a class="pre-login-link" href="sign_in.html">
+            Login
+          </a></p>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section id="login" class="container">
+      <div id="login-form" class="all-form">
+        <h2>Sign In</h2>
+        <form>
+          <div>
+            <input type="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+              title="Must follow standard email format" required />
+          </div>
+          <div>
+            <input type="password" placeholder="Password" pattern=".{6,10}"
+              title="Must be between Six(6) to Ten(10) characters" required />
+          </div>
+        </form>
+        <!-- I placed the button here so that it doesn't submit the form just yet,
           but should rather serve as a link to the Dashboard page -->
-          <a href="dashboard.html"
-            ><button class="form-button">Login</button></a
-          >
-          <a href="accounts_list.html"
-            ><p id="admin-link">Admin or Staff? Click Here!</p></a
-          >
-        </div>
-      </section>
-    </main>
-    <footer>
-      <p>Banka, Copyright &copy; 2019</p>
-    </footer>
-  </body>
+        <a href="dashboard.html"><button class="form-button">Login</button></a>
+        <a href="accounts_list.html">
+          <p id="admin-link">Admin or Staff? Click Here!</p>
+        </a>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>Banka, Copyright &copy; 2019</p>
+  </footer>
+</body>
+
 </html>
